openshift/deploy-goapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: goapp
  name: goapp
  app.kubernetes.io/part-of: goapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: goapp
    spec:
      restartPolicy: Always
      containers:
      - name: goapp
        image: paulovigne/goapp-crud:latest
        resources:
          requests:
            cpu: 125m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
          name: tcp-goapp
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/user/0
            port: tcp-goapp
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /api/user/0
            port: tcp-goapp
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
