openshift/svc-goapp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: goapp
  name: goapp
spec:
  ports:
  - name: tcp-goapp
    port: 8080
    protocol: TCP
    targetPort: tcp-goapp
  selector:
    app: goapp
  type: ClusterIP
