openshift/route-goapp.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: goapp
  labels:
    app.kubernetes.io/part-of: goapp
spec:
  path: /
  to:
    kind: Service
    name: goapp
    weight: 100
  port:
    targetPort: tcp-goapp
  wildcardPolicy: None
